# ava_nav_ros2_ws

./: .gitignore  .gitmodules  GIT_SUBMODULE_GUIDE.md  README.md  frames_2026-05-08_13.19.45.gv  hri_main_lab_map.yaml  hri_main_lab_map_2.pgm  hri_main_lab_map_2.yaml  hri_main_lab_map_3.pgm  hri_main_lab_map_3.yaml  ros2_demo.pgm  test_map_3_30_26.pgm  test_map_3_30_26.yaml
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: Delivery.action
src/nav2_demo/: package.xml  setup.cfg  setup.py
src/nav2_demo/config/: delivery_fastdds_peers.xml  loading_pose.yaml  unloading_pose.yaml
src/nav2_demo/launch/: delivery_node.launch.py  loading_goal_router.launch.py
src/nav2_demo/nav2_demo/: __init__.py  delivery_node.py  delivery_router.py
src/nav2_demo/resource/: nav2_demo
