<?xml version="1.0"?>
<package format="3">
  <name>nav2_demo</name>
  <version>0.0.0</version>
  <description>Small Nav2 demo utilities for named poses.</description>
  <maintainer email="hrilab@todo.todo">hrilab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>interfaces</depend>

  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>